--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>En el momento en que <u class="entiendo">entiendo verdaderamente</u> a mi <span class="rosa">enemigo</span>, en el momento en que le <span class="dobleray">entiendo</span> lo <br>
-    <br>suficientemente bien como para <span class="gigante">derrotarle</span>, entonces, en este preciso instante,<br><span>tambien le </span><span><u>quiero</u></span> </p>
+    <br>suficientemente bien como para <span class="gigante">derrotarle</span>, entonces, en este preciso instante,<br><span class="tan">tambien le </span><span><u class="quiero">quiero</u></span> </p>
 </body>
 </html>
